# AOC

./: .gitignore  README.md
AOC2019/day02/: day2_1.py
AOC2019/day08/: Cargo.toml
AOC2019/day10/: part2.cpp
AOC2019/day12/: day12.jl
day01/: day1_1.py
day02/: day2_1.py
day03/: day3_2.py
day04/: day4_1.py  day4_2.py
day08/src/: main.rs
day1/: day1_2.py
day10/: .part1.cpp.swp  a.out  dum.cpp  part1.cpp  part2.cpp
day2/: day2_2.py
day3/: day3_1.py
day6/: Cargo.toml
day6/src/: main.rs
day6/src/part2/: .main.rs.swp  main.rs
