[package]
name = "day6"
version = "0.1.0"
authors = ["Ryan Stephenson <ryanstephenson2013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
itertools = "0.9.0"

[[bin]]
name="part1"
path="src/main.rs"

[[bin]]
name = "part2"
path="src/part2/main.rs"
